# functions_pt_2

./: README.md  dados.parquet  etl.py  pipeline.py  pyproject.toml
